Name:            falling2d-examples
Version:         0.0.0.0
Description:     2d physics engine
License:         BSD3
Author:          Sébastien Crozt
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.2

Executable falling2d-simple
  Build-Depends:   base, vect, falling, falling2d, gloss, random
  hs-source-dirs:  simple
  Main-is:         Main.hs
  ghc-options:     -Wall -threaded -O2 -prof -rtsopts -with-rtsopts=-p -auto-all -caf-all
