Name:            falling2d-examples
Version:         0.0.0.0
Description:     2d physics engine
License:         BSD3
Author:          Sébastien Crozet
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.2

Executable falling2d-simple
  Build-Depends:   base, vect, falling, falling2d, gloss, random, normaldistribution
  hs-source-dirs:  simple
  Main-is:         Main.hs
  ghc-options:     -Wall -O2 
  -- -threaded -prof -rtsopts -with-rtsopts=-p -auto-all -caf-all
